Fix dir in iterm2

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,6 @@ Thumbs.db
 .Spotlight-V100
 .Trashes
 
-# iterm2 background
+# iterm2
  iterm2/background/i_know_how_to_make_ducks.png
+ iterm2/com.googlecode.iterm2.plist
